themes/socialblue/assets/css/brand.css
/* ... */
blockquote {
  border-left-color: #29abe2;
}

.input-group .form-control:focus ~ .input-group-addon {
  border-color: #29abe2;
  -webkit-box-shadow: 0 2px 0 0 #29abe2;
          box-shadow: 0 2px 0 0 #29abe2;
}

#skip-link a {
  background-color: #1f1f1f;
  color: #f3f3f3;
}

.navbar-secondary {
  color: #f9f9f9;
  background-color: #1f7ea7;
}

.navbar-secondary .navbar-nav a, .navbar-secondary .navbar-nav button {
  color: #f9f9f9;
}

.navbar-secondary .navbar-nav li.active a, .navbar-secondary .navbar-nav li.active button {
  border-bottom-color: #f9f9f9;
}

.navbar-scrollable:before {
  background: -webkit-gradient(linear, left top, right top, from(#1f7ea7), to(transparent));
  background: linear-gradient(90deg, #1f7ea7, transparent);
}

.navbar-scrollable:after {
  background: -webkit-gradient(linear, right top, left top, from(#1f7ea7), to(transparent));
  background: linear-gradient(-90deg, #1f7ea7, transparent);
}

.navbar-default {
  background-color: #333333;
}

.navbar-default .navbar-toggle {
  color: #ffffff;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
  color: #f3f3f3;
  background-color: #1f1f1f;
}

.navbar-default .navbar-nav > li > a,
.navbar-default .navbar-nav > li > button {
  color: #ffffff;
  fill: #ffffff;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > li > button:hover,
.navbar-default .navbar-nav > li > button:focus {
  color: #f3f3f3;
  background-color: #1f1f1f;
}

.navbar-default .navbar-nav > li > a:hover .navbar-nav__icon, .navbar-default .navbar-nav > li > a:focus .navbar-nav__icon,
.navbar-default .navbar-nav > li > button:hover .navbar-nav__icon,
.navbar-default .navbar-nav > li > button:focus .navbar-nav__icon {
  fill: #f3f3f3;
}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus,
.navbar-default .navbar-nav > .open > button,
.navbar-default .navbar-nav > .open > button:hover,
.navbar-default .navbar-nav > .open > button:focus {
  background-color: #1f1f1f;
  color: #f3f3f3;
}

.navbar-default .navbar-nav > li > a.is-active, .navbar-default .navbar-nav > li > a.is-active:hover, .navbar-default .navbar-nav > li > a.is-active:focus,
.navbar-default .navbar-nav > li > button.is-active,
.navbar-default .navbar-nav > li > button.is-active:hover,
.navbar-default .navbar-nav > li > button.is-active:focus,
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus,
.navbar-default .navbar-nav > .active > button,
.navbar-default .navbar-nav > .active > button:hover,
.navbar-default .navbar-nav > .active > button:focus {
  color: #f3f3f3;
  fill: #f3f3f3;
  background-color: #1f1f1f;
}

html:not(.js) .navbar-default .dropdown:focus > a,
html:not(.js) .navbar-default .dropdown:focus > button, html:not(.js) .navbar-default .dropdown:hover > a,
html:not(.js) .navbar-default .dropdown:hover > button {
  color: #f3f3f3;
  background-color: #1f1f1f;
}

html:not(.js) .navbar-default .dropdown:focus > a .navbar-nav__icon,
html:not(.js) .navbar-default .dropdown:focus > button .navbar-nav__icon, html:not(.js) .navbar-default .dropdown:hover > a .navbar-nav__icon,
html:not(.js) .navbar-default .dropdown:hover > button .navbar-nav__icon {
  fill: #f3f3f3;
}

.dropdown.has-alert.has-alert--desktop > a:before {
  color: #4d4d4d;
  background-color: #ffc142;
}

.search-take-over .form-control::-webkit-input-placeholder {
  color: #ffffff !important;
}

.search-take-over .form-control::-moz-placeholder {
  color: #ffffff !important;
}

.search-take-over .form-control::-ms-input-placeholder {
  color: #ffffff !important;
}

.search-take-over .form-control::placeholder {
  color: #ffffff !important;
}

.search-take-over .form-control::-moz-placeholder {
  color: #ffffff !important;
  opacity: 1;
}

.search-take-over .form-control :-ms-input-placeholder {
  color: #ffffff !important;
}

.search-take-over .form-control ::-ms-input-placeholder {
  color: #ffffff !important;
}

.navbar-nav__icon {
  fill: #ffffff;
}

.navbar__open-search-block {
  background-color: #333333;
}

.search--with-suggestions .spinner > div {
  background-color: #ffffff;
}

.card__block .form-item-data-policy label a {
  color: #33b5e5;
}

.vote-widget--social-vote .vote-vote {
  color: #4d4d4d;
  background-color: #ffc142;
}

.social-gtranslate-list--desktop > a {
  color: #ffffff;
  background-color: #333333;
}

.social-gtranslate-list--desktop > a:after {
  color: #ffffff;
}

.social-gtranslate-list--desktop > a .select-icon {
  fill: #ffffff;
}

.social-gtranslate-list--desktop > a:focus, .social-gtranslate-list--desktop > a:hover {
  color: #f3f3f3;
  fill: #f3f3f3;
  background-color: #1f1f1f;
}

.social-gtranslate-list--desktop > a:focus:after, .social-gtranslate-list--desktop > a:hover:after {
  color: #f3f3f3;
}

.social-gtranslate-list--desktop > a:focus .select-icon, .social-gtranslate-list--desktop > a:hover .select-icon {
  fill: #f3f3f3;
}

.social-gtranslate-list--desktop.open > a {
  color: #f3f3f3;
  fill: #f3f3f3;
  background-color: #1f1f1f;
}

.social-gtranslate-list--desktop.open > a:after {
  color: #f3f3f3;
}

.social-gtranslate-list--desktop.open > a .select-icon {
  fill: #f3f3f3;
}

.social-gtranslate-list--desktop.open > a:focus, .social-gtranslate-list--desktop.open > a:hover {
  color: #f3f3f3;
  fill: #f3f3f3;
  background-color: #1f1f1f;
}

.social-gtranslate-list--desktop.open > a:focus:after, .social-gtranslate-list--desktop.open > a:hover:after {
  color: #f3f3f3;
}

.social-gtranslate-list--desktop.open > a:focus .select-icon, .social-gtranslate-list--desktop.open > a:hover .select-icon {
  fill: #f3f3f3;
}

#sliding-popup {
  background-color: #1f7ea7 !important;
}

.marker-cluster:after,
.marker-cluster-small:after {
  background: #1f80aa;
}
/* ... */

